Changed dark mode colors and fixed sizing on taxes page

--- a/public/style.css
+++ b/public/style.css
@@ -1,29 +1,29 @@
 /* Variables */
 
 :root {
-  --darkground: black;
-  --darkcolor: #E1FF00;
+  --darkground: #282828;
+  --darkcolor: #C2ADFF;
 }
 
 /* Fonts and sizes */
 
 body {
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 h1 {
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 700;
 }
 
-h2 { 
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+h2 {
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 /* Needed for Nav-Bar */
 
 .navbar-collapse.collapse.in {
-  display: block!important;
+  display: block !important;
 }
 
 .lightMode {
@@ -69,7 +69,7 @@ body {
 
 .screen {
   grid-column: 1 / -1;
-  background-color: rgba(0, 0, 0, .60);
+  background-color: rgba(0, 0, 0, 0.6);
   display: flex;
   align-items: flex-end;
   justify-content: space-around;
@@ -87,12 +87,12 @@ body {
 }
 
 .bottom {
-    position: fixed;
-    padding: 10px 10px 0px 10px;
-    bottom: 0;
-    width: 100%;
-    height: 40px;
-    transition: 0.8s all;
+  position: fixed;
+  padding: 10px 10px 0px 10px;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  transition: 0.8s all;
 }
 
 /* Dark Mode CSS */
@@ -108,7 +108,7 @@ body {
   transition: 0.8s all;
 }
 
-.calcContain > button{
+.calcContain > button {
   font-size: 2rem;
   border: 1px solid var(--darkcolor);
   background-color: rgba(0, 0, 0, 1);
@@ -123,8 +123,8 @@ body {
   transition: 0.8s all;
 }
 
-.bg-dark { 
-  background-color: var(--darkcolor)!important;
+.bg-dark {
+  background-color: var(--darkcolor) !important;
 }
 
 .darkBtn {
@@ -163,7 +163,7 @@ body {
 .taxContainer {
   height: 20em;
   width: 20em;
-  background-color: rgba(0, 0, 0, .60);
+  background-color: rgba(0, 0, 0, 0.6);
   text-align: center;
   line-height: 5em;
 }
@@ -177,12 +177,28 @@ body {
   color: white;
 }
 
-input:invalid+span:after {
-  content: '❌';
+.taxScreen {
+  grid-column: 1 / -1;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  /* justify-content: space-around; */
+  flex-direction: column;
+  padding: 0.625em;
+  transition: 0.8s all;
+}
+
+.taxScrn {
+  color: white;
+  height: 5em;
+}
+
+input:invalid + span:after {
+  content: "❌";
   padding-left: 5px;
 }
 
-input:valid+span:after {
-  content: '✓';
+input:valid + span:after {
+  content: "✓";
   padding-left: 5px;
 }
